# MLFoundations

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: 01_data_preprocessing.ipynb  02_regression.ipynb  03_classification.ipynb  05_feature_engineering.ipynb  06_gradient_boosting.ipynb  07_hyperparameter_tuning.ipynb  08_model_interpretation.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
notebooks/catboost_info/test/: events.out.tfevents
